<resources>
    <string name="app_name">smartinventory</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Smart Inventory</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="barcodeTabHeader">Scan Barcode</string>
    <string name="inventoryTabHeader">Inventory</string>
    <string name="welcome">Welcome to S.I.M.S</string>
    <string name="ples">Press the button to scan your item or input information manually</string>
    <string name="scannow">SCAN NOW</string>
    <string name="inputmanual">MANUAL INPUT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_manual_input">manualInput</string>
    <string name="form_header">Product Details</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="amount">Amount</string>
    <string name="shelf">Shelf</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_form_item">formItem</string>
    <string name="expiryHint">Write Date Here</string>
    <string name="nameHint">Your Own Description</string>
    <string name="submit">submit</string>
    <string name="proceed">Proceed to fill up product details</string>
    <string name="selshelf">Product Details</string>
    <string name="bigshelf">Large Shelf</string>
    <string name="ShelfSmall1">Small Shelf 1</string>
    <string name="ShelfSmall2">Small Shelf 2</string>
</resources>
