<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_form_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.polarvenezia.smartinventory.formItem"
    tools:showIn="@layout/activity_form_item">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.polarvenezia.smartinventory.formItem"
        tools:showIn="@layout/activity_form_item">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_header"
            android:textSize="28sp"
            android:id="@+id/formHead"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginStart="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/colorPrimaryDark"
                android:layout_below="@+id/formHead"
                android:layout_marginTop="16dp"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:id="@+id/namehead"/>
            <EditText
                android:paddingStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/namefield"
                android:layout_marginTop="16dp"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:hint="@string/nameHint"
                android:layout_below="@+id/namehead"
                android:background="@drawable/border"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textColor="@color/colorPrimaryDark"
                android:layout_below="@+id/shelffield"
                android:layout_marginTop="16dp"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:id="@+id/typehead" />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/typeSpinner"
                android:layout_below="@+id/typehead"
                android:layout_marginTop="16dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/border"
                />
            <!--<TextView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/amount"-->
                <!--android:textColor="@color/colorPrimaryDark"-->
                <!--android:layout_below="@+id/typeSpinner"-->
                <!--android:layout_marginTop="16dp"-->
                <!--android:layout_marginStart="10dp"-->
                <!--android:textSize="20sp"-->
                <!--android:id="@+id/amthead" />-->
            <!--<EditText-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="30dp"-->
                <!--android:id="@+id/amtSpinner"-->
                <!--android:layout_below="@+id/amthead"-->
                <!--android:paddingStart="10dp"-->
                <!--android:layout_marginTop="16dp"-->
                <!--android:layout_marginStart="10dp"-->
                <!--android:background="@drawable/border"-->
                <!--/>-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shelf"
                android:textColor="@color/colorPrimaryDark"
                android:layout_below="@+id/namefield"
                android:layout_marginTop="16dp"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:id="@+id/Shelf" />
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/shelffield"
                android:layout_marginTop="16dp"
                android:layout_marginStart="10dp"
                android:textSize="16sp"
                android:layout_below="@+id/Shelf"
                android:background="@drawable/border"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitbutton"
            android:layout_marginTop="24dp"
            android:layout_marginStart="10dp"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:layout_below="@+id/typeSpinner"
            android:background="@drawable/border"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</ScrollView>
