<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.polarvenezia.smartinventory.Inventory"
    android:background="@drawable/appbg">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="40dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:weightSum="1"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shelf"
                android:textSize="20sp"
                android:layout_weight="0.5"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:textAllCaps="true"
                android:layout_marginStart="20dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Product Name"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:padding="10dp"
                android:id="@+id/itemTitle"
                android:layout_weight="0.5"
                android:textAllCaps="true"

                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:weightSum="1"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bigshelf"
                android:textSize="18sp"
                android:layout_weight="0.5"
                android:padding="14dp"
                android:textColor="#FFFFFF"/>
             <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Product Name"
                    android:textSize="18sp"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:padding="10dp"
                    android:id="@+id/bsName"
                    android:layout_weight="0.5"
                    />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="20dp"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ShelfSmall1"
                android:textSize="18sp"
                android:padding="10dp"
                android:layout_weight="0.5"
                android:textColor="#FFFFFF"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Product Name"
                android:textSize="18sp"
                android:padding="10dp"
                android:textAlignment="center"

                android:id="@+id/ss1Name"
                android:layout_weight="0.5"
                android:textColor="#FFFFFF"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ShelfSmall2"
                android:textSize="18sp"
                android:layout_weight="0.5"
                android:textColor="#FFFFFF"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Product Name"
                android:textSize="18sp"
                android:textAlignment="center"
                android:padding="10dp"
                android:layout_weight="0.5"
                android:id="@+id/ss2Name"
                android:textColor="#FFFFFF"
                />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
